This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
10/18/22: Allowed points to be selected outside the image area when
dragging the mouse when Navigator is in Edit Mode (In 4.0).

10/14/22: SEM_4-0-13
10/14/22: Prevented various tasks from being started from the menu when
continuous acquisition is running; they can still be run from script (In 4.0).

10/14/22: Fixed Try Again with Marker for a montage (In 4.0).

10/14/22: Made it pick the nearest beam shift calibration in a magnification
range instead of using the first one it finds in the range, which made
refined calibrations not get used (In 4.0).

10/14/22: Fixed wrong image being displayed when loading single-frame maps
with the option to convert to bytes on, and assignment of map ID to loaded-in
single-frame images (In 4.0).

10/5/22: Fixed problem with autofocus using wrong alpha or probe mode to
assess if calibration exists (In 4.0).

9/27/22: Changed test for whether a camera is an Alpine so that it excludes a
variant of K3 put on Continuum filter (In 4.0).

9/26/22: Fixed taking FEI STEM images when there is advanced scripting
(In 4.0).

9/22/22: No longer allow using just a number instead of using DoScript
(In 4.0).

9/22/22: SEM_4-0-12
9/22/22: Fixed new test for whether flashing is supported.

9/21/22: SEM_4-0-11
9/21/22: Added message box for RotationAndPixel pixel sizes of 999 (In 4.0).

9/20/22: Fixed a problem with initial rotation angles if the EFTEM camera
is calibrated first, and made it test for FEG flashing capability for an FEI
scope instead of assuming it exists.

9/19/22: Clarified dose/frame text for Falcon 4 and fixed showing CLA for IS
in STEM mode on JEOL (In 4.0).

9/6/22: Fixed two crashes if hole finder finds only one or two points in
montage (In 4.0).
