@@ -705,7 +705,7 @@
         been stopped, it will resume at the next logical step.&nbsp; When the dialog is
         opened to set parameters for a series to be run from the Navigator, this button
         is converted to <strong>Set Up Extra Output</strong>.&nbsp; Use this button to
-        open the <A HREF="#hid_tiltseries_extraoutput">Tilt Series Extra Output</A> dialog
+        open the <A HREF="hidd_tsextrafile.htm">Tilt Series Extra Output</A> dialog
         and set or change the selections for extra output.</P>
       <P><B>Single Loop</B></P>
       <P>If the tilt series has not been started yet, using this button to start it will
