@@ -98,6 +98,13 @@
       size as the main output, but this is not required or done automatically by the 
       program; you have to set up the montage of the needed size when you open the 
       output file.</P>
+    <P>When running multiple tilt series from the Navigator, you can use the 
+      &#39;SuffixForExtraFile&#39; script command to have one or more files opened for extra 
+      output.&nbsp; These files will all be opened before the main tilt series output 
+      file.&nbsp; You need to anticipate how many other files will be open when 
+      starting the batch acquisition and set the file numbers here appropriately.&nbsp; 
+      Specifically, if no other files are open and you are doing just one kind of 
+      output, you need to set its file number to 1.</P>
     <P><b>Save multiple Records in consecutive files</b></P>
     <P>Select this option to have each extra Record image at one tilt angle saved into 
       a separate file, where the file numbers are consecutive from the one selected 
