@@ -4233,7 +4233,10 @@
             will be the root of the regular filename, plus the suffix, followed by the
             extension of the regular filename.&nbsp; The extra files will be opened before
             the regular file.&nbsp; They will be closed when the regular file is closed (at
-            the end of acquisition or before opening a new file).&nbsp; The suffixes are not persistent
+            the end of acquisition or before opening a new file).&nbsp; If any file has not had images
+            written to it, it will be removed after being closed, so you can use this command to specify
+            the maximum number of files needed, even if some items do not require all the files.&nbsp; The
+             suffixes are not persistent
             and the command needs to be included in a script run before the main action.
           </TD>
         </TR>
